--- a/app.json
+++ b/app.json
@@ -160,11 +160,16 @@
          "required": false,
          "value": ""
       },
-      "URL": {
-         "description": "The Heroku App URL :-  https://<appname>.herokuapp.com/",
-         "required": false,
-         "value": ""
-      },
+    "URL": {
+      "description": "The Heroku App URL :- edit this to your app name https://your app name.herokuapp.com/",
+      "required": false,
+      "value": ""
+     },
+    "MESSAGE_DUMP": {
+      "description": "A chat for logging bot events.. ⚠️ Remember :- You must add your bot to that group.. Otherwise telethon modules never works.. Eg songs etc💌",
+      "value": "",
+      "required": true
+     },
       "No_LOAD": {
          "description": "Dont load these modules cause they shit, space separation",
          "required": false,
