--- a/app.json
+++ b/app.json
@@ -167,8 +167,8 @@
       },
       "MESSAGE_DUMP": {
         "description": "A chat for logging bot events.. ⚠️ Remember :- You must add your bot to that group.. Otherwise telethon modules never works.. Eg songs etc💌",
-        "value": "",
         "required": true
+        "value": ""
      },
       "No_LOAD": {
          "description": "Dont load these modules cause they shit, space separation",
