--- a/app.json
+++ b/app.json
@@ -1,13 +1,12 @@
 {
       "name": "GreysonBot",
       "description": "Telegram group management bot.",
-      "logo": "https://telegra.ph/file/83dbae46536c4f88a28b7.jpg",
       "keywords": [
          "telegram",
          "anime",
          "group",
          "manager",
-         "Greyson"
+         "Masha"
       ],   
    "repository": "https://github.com/Kunal-Diwan/GreysonBot",
    "addons": [
@@ -18,14 +17,6 @@
          "plan": "heroku-postgresql"
       }
    ],
-   "buildpacks": [
-    {
-      "url": "https://github.com/heroku/heroku-buildpack-python"
-    },
-    {
-      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
-    }
-  ],  
    "env": {
       "TOKEN": {
          "description": "Your bot token. Get one from @BotFather duh",
@@ -50,7 +41,7 @@
       "OWNER_ID": {
          "description": "Your user ID as an integer.",
          "required": true,
-         "value": "1701601729"
+         "value": ""
       },
       "BOT_ID": {
          "description": "Your bot ID.. Use any other bot to get it.",
@@ -67,17 +58,17 @@
       },
       "OWNER_USERNAME": {
          "description": "Your username without the @",
-         "value": "Kunaldiwan"
+         "value": ""
       },
       "SUPPORT_CHAT": {
          "description": "Your Telegram support group chat username where your users will go and bother you with shit But be like: MyGroupChatUsernameBlah. If this ever points to masha support than consider you made an enemy.",
          "required": true,
-         "value": "GreysonChats"
+         "value": ""
       },
       "MONGO_DB_URI": {
-         "description": "Required for database connections",
-         "required": true,
-         "value": "mongodb+srv://Kunaldiwan:<password>@cluster0.1fgui.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+         "description": "Required for database connections.",
+         "required": false,
+         "value": ""
       },
       "IBM_WATSON_CRED_URL": {
          "description": "This is required for the speech to text module. Get your USERNAME from https://console.bluemix.net/docs/services/speech-to-text/getting-started.html",
@@ -115,7 +106,7 @@
       "DEV_USERS": {
          "description": "ID of users who are Devs of your bot (can use /py etc.). If you are a noob and would come and bother Masha support then keep the current ID's here at they are and add yours.",
          "required": false,
-         "value": "1701601729"
+         "value": ""
       },
       "sw_api": {
          "description": "Spamwatch API Token, Get one from @SpamWatchBot.",
@@ -179,10 +170,10 @@
          "description": "Set this to True if you want ! to be a command prefix along with /. Recommended is True",
          "value": "True"
       },
-      "MAINTAINER_LINK": {
-         "description": "Optional: Your telegram link.",
-         "required": "True"
-         "value": "https://t.me/kunaldiwan"
+      "DONATION_LINK": {
+         "description": "Optional: link where you would like to receive donations. If you are a noob, better leave it linking to paul",
+         "required": false,
+         "value": "https://www.paypal.me/PaulSonOfLars"
       },
       "DEL_CMDS": {
          "description": "Set this to True if you want to delete command messages from users who don't have the perms to run that command.",
