--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
       "name": "Greyson Bot",
       "description": "Telegram group management bot.",
+      "logo": "https://telegra.ph/file/83dbae46536c4f88a28b7.jpg",
       "keywords": [
          "telegram",
          "anime",
