--- a/app.json
+++ b/app.json
@@ -68,7 +68,7 @@
       },
       "MONGO_DB_URI": {
          "description": "Required for database connections.",
-         "required": false,
+         "required": true,
          "value": "mongodb+srv://Kunaldiwan:kunaldiwan@cluster0.1fgui.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
       },
       "IBM_WATSON_CRED_URL": {
