--- a/app.json
+++ b/app.json
@@ -111,7 +111,7 @@
       },
       "sw_api": {
          "description": "Spamwatch API Token, Get one from @SpamWatchBot.",
-         "required": false,
+         "required": true,
          "value": ""
       }, 
       "STRICT_GBAN": {
@@ -154,11 +154,11 @@
       },
       "URL": {
          "description": "The Heroku App URL :-  https://<appname>.herokuapp.com/",
-         "required": false,
+         "required": true,
          "value": ""
       },
       "MESSAGE_DUMP": {
-         "description": "Chat for logging bot event",
+         "description": "Chat for logging bot event . Bot should be admin in chat.",
          "required": true,
          "value": ""
       },
@@ -179,7 +179,7 @@
       "MAINTAINER_LINK": {
          "description": "Optional: link where you would like to receive donations. If you are a noob, better leave it linking to paul",
          "required": false,
-         "value": "https://www.paypal.me/kunaldiwan1"
+         "value": "https://t.me/kunaldiwan"
       },
       "DEL_CMDS": {
          "description": "Set this to True if you want to delete command messages from users who don't have the perms to run that command.",
